# tiny-agent

./: LICENSE  README.md  pyproject.toml
tests/: test_tiny_agent.py
tiny_agent/: cli.py  core.py  tools.py
